ASC Prod BAckup/ASC Prod/force-app/main/default/objects/CountryWithISOCode__mdt/CountryWithISOCode__mdt.object-meta.xml
<CustomObject>
    <label>CountryWithISOCode</label>
    <pluralLabel>CountryWithISOCodes</pluralLabel>
</CustomObject>