ASC Prod BAckup/ASC Prod/force-app/main/default/objects/CountryWithISOCode__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Store 2 digit country code</description>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>