ASC Prod BAckup/ASC Prod/force-app/main/default/objects/CountryWithISOCode__mdt/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <label>Country Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>