ASC Prod BAckup/ASC Prod/force-app/main/default/objects/CountryWithISOCode__mdt/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <label>Currency Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>