ASC Prod BAckup/ASC Prod/force-app/main/default/objects/CountryWithISOCode__mdt/fields/ISO_code__c.field-meta.xml
<CustomField>
    <fullName>ISO_code__c</fullName>
    <label>ISO code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>